# CV_with_IA_Agent

./: .gitignore  README.md  agents.py  crew.py  requirements.txt  streamlit_app.py  tasks.py
cv_agent_ai/: README.md  pyproject.toml  requirements.txt
cv_agent_ai/src/cv_agent_ai/: crew.py  main.py  workflow.py
cv_agent_ai/src/cv_agent_ai/agents/: project_selector.py
cv_agent_ai/src/cv_agent_ai/config/: tasks.yaml  tasks.yml
cv_agent_ai/src/cv_agent_ai/tools/: github_tool.py  show_attributes.py
cv_agents/: .env.example  .gitignore  README.md  pyproject.toml
cv_agents/src/cv_agents/: __init__.py  crew.py  main.py
cv_agents/src/cv_agents/config/: agents.yaml  config.py  tasks.yaml
cv_agents/src/cv_agents/tools/: github_tool.py
cv_ai_agents/: README.md  pyproject.toml  requirements.txt
cv_ai_agents/src/cv_ai_agents/: crew.py  main.py  models.py
cv_ai_agents/src/cv_ai_agents/config/: agents.yaml  tasks.yaml
cv_ai_agents/src/cv_ai_agents/tools/: github_tool.py
knowledge/: user_preferences.txt
output/: job_description_synthetise.txt  project_repo.json  recommendations.json  report.md  top_project.json
tools/: github_tool.py
