[project]
name = "cv_agent_ai"
version = "0.1.0"
description = "cv_agent_ai using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.108.0,<1.0.0"
]

[project.scripts]
cv_agent_ai = "cv_agent_ai.main:run"
run_crew = "cv_agent_ai.main:run"
train = "cv_agent_ai.main:train"
replay = "cv_agent_ai.main:replay"
test = "cv_agent_ai.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
