[project]
name = "cv_ai_agents"
version = "0.1.0"
description = "cv_ai_agents using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.108.0,<1.0.0"
]

[project.scripts]
cv_ai_agents = "cv_ai_agents.main:run"
run_crew = "cv_ai_agents.main:run"
train = "cv_ai_agents.main:train"
replay = "cv_ai_agents.main:replay"
test = "cv_ai_agents.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
